Minor refactors for code cosmetics

--- a/opcua/dashboard/python-opcua-asyncio/latest/Dockerfile
+++ b/opcua/dashboard/python-opcua-asyncio/latest/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.11.12-slim-bookworm
 # set environment variables here with 'ENV VAR=value'
 # this allows dynamic customization of container behavior
 
-# address of the PLC OPC UA server
+# address of the OPC UA server
 ENV SERVER_URI=
 
 # Install needed Python packages
