--- a/.github/workflows/publish-python-asyncua-to-GHCR.yaml
+++ b/.github/workflows/publish-python-asyncua-to-GHCR.yaml
@@ -31,7 +31,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/frozenbitz/python-server
+          images: ghcr.io/${{ github.actor }}/python-server
           tags: | 
             type=raw,value=latest
           labels: |
