--- a/.github/workflows/publish-python-asyncua-to-GHCR.yaml
+++ b/.github/workflows/publish-python-asyncua-to-GHCR.yaml
@@ -31,7 +31,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.actor }}/python-server
+          images: ghcr.io/${{ github.repository_owner,, }}/python-server
           tags: | 
             type=raw,value=latest
           labels: |
@@ -52,7 +52,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up QEMU
