--- a/.github/workflows/publish-open62541-to-GHCR.yaml
+++ b/.github/workflows/publish-open62541-to-GHCR.yaml
@@ -35,7 +35,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository_owner,, }}/c-server
+          images: ghcr.io/laboratory-for-safe-and-secure-systems/open62541
           tags: | 
             type=raw,value=latest
           labels: |
