--- a/.github/workflows/publish-python-asyncua-to-GHCR.yaml
+++ b/.github/workflows/publish-python-asyncua-to-GHCR.yaml
@@ -31,7 +31,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository_owner,, }}/python-server
+          images: ghcr.io/laboratory-for-safe-and-secure-systems/python-asyncua
           tags: | 
             type=raw,value=latest
           labels: |
