Fix: testing if limiting dotnet build will stop the pipeline to fail builds randomly
There is an issue with dotnet, where some of the configuration files are locked, bc. of other processes during the build. This can be fixed in some cases. However, these problems occur randomly, so we will see....

--- a/opcua/tools/model-compiler/Dockerfile
+++ b/opcua/tools/model-compiler/Dockerfile
@@ -17,7 +17,7 @@ FROM build AS publish
 WORKDIR /src/UA-ModelCompiler/
 ENV DOTNET_EnableWriteXorExecute=0
 # output the executable and all required .dlls to /app/publish
-RUN dotnet build "ModelCompiler.sln" ${OPTIONS} -o /app/publish 
+RUN dotnet build -maxcpucount:1 "ModelCompiler.sln" ${OPTIONS} -o /app/publish 
 
 # copy the model compiler into a new instance and generate NodeSet definitions from the OPC data models
 FROM base AS final
