water-tank-sim: added builder metadata and a default build script

--- a/opcua/water-tank-simulation/python-opcua-asyncio/latest/Dockerfile
+++ b/opcua/water-tank-simulation/python-opcua-asyncio/latest/Dockerfile
@@ -10,10 +10,10 @@ ENV SERVER_URI=
 RUN pip install asyncua
 
 # Copy app files
-COPY /app /app
+COPY --from=container_context app /app
 
 # startup is controlled by this script which depends on environment variables
-COPY /startup.sh /
+COPY --from=container_context startup.sh /
 
 # will be executed on startup
 ENTRYPOINT [ "usr/bin/env" ]
