--- a/opcua/plc-logic/python-opcua-asyncio/latest/Dockerfile
+++ b/opcua/plc-logic/python-opcua-asyncio/latest/Dockerfile
@@ -16,10 +16,10 @@ ENV PS_URI=
 RUN pip install asyncua
 
 # Copy app files
-COPY /app /app
+COPY --from=container_context app /app
 
 # startup is controlled by this script which depends on environment variables
-COPY /startup.sh /
+COPY --from=container_context startup.sh /
 
 # will be executed on startup
 ENTRYPOINT [ "usr/bin/env" ]
