update: added netcat to builds for healthcheck integration

--- a/opcua/server/python-opcua-asyncio/latest/Dockerfile
+++ b/opcua/server/python-opcua-asyncio/latest/Dockerfile
@@ -25,6 +25,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && \
     apt-get install -y \
     libssl-dev \
+    netcat-openbsd \
     # python3-venv \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
